Fix form overflow.

--- a/invite_form/styles/global.css
+++ b/invite_form/styles/global.css
@@ -47,4 +47,6 @@
 body{
     font-size: 1rem; /* 100% */
     background-color: var(--background);
+
+    overflow: hidden;
 }
