--- a/invite_form/styles/main.css
+++ b/invite_form/styles/main.css
@@ -8,7 +8,6 @@
     align-items: flex-start;
 
     aside {
-
         width: 100%;
         height: 45.5rem;
         background-color: var(--shape-background);
@@ -17,12 +16,15 @@
     }
 
     main {
+        overflow-y: auto;
         
         background-color: var(--shape-background);
-        border-radius: 0 .5rem 8px .5rem;
+        border-radius: 0 .5rem .5rem .5rem;
         outline: 1.25rem solid var(--shape-background);
 
         div[id="invite"] {
+            height: calc(100vh - 2.5rem);
+            
             background-color: var(--shape-body);
             border-radius: .5rem;
         }
